--- a/templates/ratearant/index.html
+++ b/templates/ratearant/index.html
@@ -5,7 +5,7 @@
     <head> <title>Rate-A-Rant</title>
     </head>
     <body>
-    <h1>Title</h1> <div class="pTextBlue">
+    <h1 id="titleGreen">Title</h1> <div class="pTextBlue">
     <br/>
         <img src="{% static 'images/ratearanticon.jpeg' %}" alt="Site icon" style="width: 100px; height: 100px;"/>
     <strong>{{ message }}</strong><br /> </div>
