--- a/templates/ratearant/index.html
+++ b/templates/ratearant/index.html
@@ -1,13 +1,13 @@
 {% load static %}
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="{% static 'styles.css' %}">
+<link rel="stylesheet" href="{% static 'ratearant/styles.css' %}">
     <head> <title>Rate-A-Rant</title>
     </head>
     <body>
     <h1 id="titleGreen">Title</h1> <div class="pTextBlue">
     <br/>
-        <img src="{% static 'images/ratearanticon.jpeg' %}" alt="Site icon" style="width: 100px; height: 100px;"/>
+        <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" alt="Site icon" style="width: 100px; height: 100px;"/>
     <strong>{{ message }}</strong><br /> </div>
 
     </body>
