--- a/templates/ratearant/index.html
+++ b/templates/ratearant/index.html
@@ -7,6 +7,7 @@
     <body>
     <h1 id="titleGreen">Title</h1> <div class="pTextBlue">
     <br/>
+        image
         <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" alt="Site icon" style="width: 100px; height: 100px;"/>
     <strong>{{ message }}</strong><br /> </div>
 
