--- a/templates/ratearant/about.html
+++ b/templates/ratearant/about.html
@@ -12,6 +12,5 @@
 {% endblock %}
 
 {% block block_footer %}
-    <li><a href="{% url 'ratearant:about' %}">About</a>
+    <li><a href="{% url 'ratearant:index' %}">Index</a>
 {% endblock %}
-
