--- a/templates/ratearant/home.html
+++ b/templates/ratearant/home.html
@@ -5,6 +5,10 @@
     Index Page
 {% endblock %}
 
+{% block block_header %}
+
+{% endblock %}
+
 {% block body_block %}
     <div class="pTextBlue">
     <p>{{ message }}</p>
@@ -14,3 +18,4 @@
 {% block block_footer %}
 
 {% endblock %}
+
