--- a/templates/ratearant/register.html
+++ b/templates/ratearant/register.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block block_title %}
-    Index Page
+    Register Page
 {% endblock %}
 
 {% block body_block %}
@@ -12,6 +12,5 @@
 {% endblock %}
 
 {% block block_footer %}
-    <li><a href="{% url 'ratearant:about' %}">About</a>
-{% endblock %}
 
+{% endblock %}
