--- a/templates/ratearant/base.html
+++ b/templates/ratearant/base.html
@@ -2,36 +2,67 @@
 {% load static %}
 <html>
     <link rel="stylesheet" href="{% static 'ratearant/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'ratearant/headers.css' %}">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
         <title>
             Rate-A-Rant
             {% block block_title %}
             {% endblock %}
         </title>
     </head>
-
 <body>
-    <header class="headerRAR1" id="headerVisitedRAR1">
-        <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" alt="Site icon" style="width: 100px; height: 100px;"/>
-        <a href="{% url 'ratearant:register' %}">Register</a>
-        <a href="{% url 'ratearant:login' %}">Login</a>
-        {% block block_header %}
-        {% endblock %}
+
+<header class="headerRAR1 d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+
+    <div class="container">
+      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+        <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" alt="Site icon" style="width: 130px; height: 130px;"/>
+        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
+          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
+        </a>
+        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+        <li><a href="#" class="nav-link px-2" style="color: white"><h2>Categories</h2></a></li>
+        <li><a href="#" class="nav-link px-2" style="color: white"><h2>Trending</h2></a></li>
+            <li><a href="#" class="nav-link px-2" style="color: white"><h2>Restaurants</h2></a></li>
+        </ul>
+        <div class="text-end">
+        <button type="button" onclick="location.href='{% url 'ratearant:login' %}';" class="btn btn-outline-primary me-2">Login</button>
+            <button type="button" onclick="location.href='{% url 'ratearant:register' %}';" class="btn btn-primary">Register</button>
+        </div>
+      </div>
+    </div>
+    {% block block_header %}
+    {% endblock %}
     </header>
-    <hr/>
+
+
     <div>
         {% block body_block %}
         {% endblock %}
     </div>
-    <hr/>
+
     <footer class="footer">
         {% if isHomePage %}
-            <li><a href="{% url 'ratearant:about' %}">About</a></li>
-        {% else %}
-            <li><a href="{% url 'ratearant:home' %}">Home</a></li>
+            <div class="footerLinks">
+                <a href="{% url 'ratearant:about' %}" style="color: white"><h3>About</h3></a>
+            </div>
+        {% elif isAboutPage %}
+            <div class="footerLinks">
+                <a href="{% url 'ratearant:home' %}" style="color: white"><h3>Home</h3></a>
+            </div>
+            {% else %}
+        <div class="footerLinks">
+            <a href="{% url 'ratearant:about' %}"><h3>About</h3></a>
+            <a href="{% url 'ratearant:home' %}"><h3>Home</h3></a>
+        </div>
         {% endif %}
        {% block block_footer %}
        {% endblock %}
     </footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
