--- a/templates/ratearant/base.html
+++ b/templates/ratearant/base.html
@@ -1,8 +1,8 @@
 <!DOCTYPE>
 {% load static %}
 <html>
-    <link rel="stylesheet" href="{% static 'ratearant/styles.css' %}">
-    <link rel="stylesheet" href="{% static 'ratearant/headers.css' %}">
+    <link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'ratearant/CSS/headers.css' %}">
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -19,7 +19,7 @@
 
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" alt="Site icon" style="width: 130px; height: 130px;"/>
+        <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" id="img1" alt="Site icon" style="width: 130px; height: 130px;" onclick="changeImage()"/>
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
           <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
         </a>
@@ -64,5 +64,6 @@
     </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="{% static 'ratearant/scripts/scriptsTest.js' %}"></script>
 </body>
 </html>
