--- a/templates/ratearant/login.html
+++ b/templates/ratearant/login.html
@@ -7,7 +7,15 @@
 
 {% block body_block %}
     <div class="pTextBlue">
-    <p>{{ message }}</p>
+        <h1>Login to ratearant</h1>
+        <form id="login_form" method="post" action="{% url 'ratearant:login' %}">
+            {% csrf_token %}
+            Username: <input type="text" name="username" value="" size="50" />
+            <br />
+            Password: <input type="password" name="password" value="" size="50" />
+            <br />
+            <input type="submit" value="submit" />
+        </form>
     </div>
 {% endblock %}
 
