--- a/templates/ratearant/register.html
+++ b/templates/ratearant/register.html
@@ -7,7 +7,24 @@
 
 {% block body_block %}
     <div class="pTextBlue">
-    <p>{{ message }}</p>
+        {% if registered %}
+            Ratearant says: <strong>thank you for registering!</strong>
+            <a href="{% url 'ratearant:home' %}">Return to the homepage.</a><br />
+        {% else %}
+            Ratearant says: <strong>register here!</strong><br /><br />
+            <form id="user_form" method="post" action="{% url 'ratearant:register' %}" enctype="multipart/form-data">
+                {% csrf_token %}
+                
+                {{ user_form.username.label_tag }}{{ user_form.username }}<br /><br />
+                {{ user_form.first_name.label_tag }}{{ user_form.first_name }}<br /><br />
+                {{ user_form.last_name.label_tag }}{{ user_form.last_name }}<br /><br />
+                {{ user_form.email.label_tag }}{{ user_form.email }}<br /><br />
+                {{ user_form.password.label_tag }}{{ user_form.password }}<br /><br />
+                {{ profile_form.as_p }}
+
+                <input type="submit" name="submit" value="Register" />
+            </form>
+        {% endif %}
     </div>
 {% endblock %}
 
