--- a/static/ratearant/CSS/styles.css
+++ b/static/ratearant/CSS/styles.css
@@ -4,8 +4,21 @@
     color: blue;
 }
 
+.pTextRed {
+    color: #95090d;
+}
+
+.btnRed {
+    background-color: #95090d;
+    color: white;
+    width: 100px;
+}
+
 #titleGreen {
     color: green;
+}
+.btn {
+    width: 100px;
 }
 
 .headerRAR{
