--- a/templates/ratearant/about.html
+++ b/templates/ratearant/about.html
@@ -6,8 +6,8 @@
 {% endblock %}
 
 {% block body_block %}
-    <div class="pTextBlue">
-    <p>{{ message }}</p>
+    <div class="pTextRed" style="text-align: center;">
+    <p>Welcome to Ratearant. The best place for all of your restaurant rating, reviewing and discovering needs! Search through all the best restaurants and share your own opinions with Ratearant!</p>
     </div>
 {% endblock %}
 
