--- a/templates/ratearant/login.html
+++ b/templates/ratearant/login.html
@@ -6,15 +6,21 @@
 {% endblock %}
 
 {% block body_block %}
-    <div class="pTextBlue">
-        <h1>Login to ratearant</h1>
+<link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}"> <!-- don't know why I'm having to add this in order to make line 
+                                                                                  20 show up correctly-->
+    <div class="pTextRed" style="text-align: center;">
+        <h4>Login to Ratearant</h4>
         <form id="login_form" method="post" action="{% url 'ratearant:login' %}">
             {% csrf_token %}
-            Username: <input type="text" name="username" value="" size="50" />
-            <br />
-            Password: <input type="password" name="password" value="" size="50" />
-            <br />
-            <input type="submit" value="submit" />
+            <div style="margin-bottom: 10px;">
+                Username: <input type="text" name="username" value="" size="50" />
+            </div>
+            <div style="margin-bottom: 10px;">
+                Password: <input type="password" name="password" value="" size="50" />
+            </div>
+            <div style="text-align: center;"> 
+                <input type="submit" name="submit" value="Submit" class="btn btnRed" style="margin: 0 auto;" />
+            </div>
         </form>
     </div>
 {% endblock %}
