--- a/templates/ratearant/logout.html
+++ b/templates/ratearant/logout.html
@@ -6,10 +6,10 @@
 {% endblock %}
 
 {% block body_block %}
-    <div class="pTextBlue">
-        <h1>Logout to ratearant</h1>
+    <div class="pTextRed">
+        <h1>Logout of Ratearant</h1>
         <br>
-        <h1>Logout successfully</h1>
+        <h1>Logged out successfully</h1>
     </div>
 {% endblock %}
 
