--- a/templates/ratearant/register.html
+++ b/templates/ratearant/register.html
@@ -6,23 +6,29 @@
 {% endblock %}
 
 {% block body_block %}
-    <div class="pTextBlue">
+<link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}"> <!-- don't know why I'm having to add this in order to make line 
+                                                                                      29 show up correctly-->
+    <div class="pTextRed" style="text-align: center;">
         {% if registered %}
-            Ratearant says: <strong>thank you for registering!</strong>
+            <h4>Thank you for registering!</h4>
             <a href="{% url 'ratearant:home' %}">Return to the homepage.</a><br />
         {% else %}
-            Ratearant says: <strong>register here!</strong><br /><br />
-            <form id="user_form" method="post" action="{% url 'ratearant:register' %}" enctype="multipart/form-data">
+            <h3>Welcome to Ratearant!</h3><br /><br />
+            <form id="user_form" method="post" action="{% url 'ratearant:register' %}" enctype="multipart/form-data" style="display: inline-block; text-align: left;">
                 {% csrf_token %}
                 
-                {{ user_form.username.label_tag }}{{ user_form.username }}<br /><br />
-                {{ user_form.first_name.label_tag }}{{ user_form.first_name }}<br /><br />
-                {{ user_form.last_name.label_tag }}{{ user_form.last_name }}<br /><br />
-                {{ user_form.email.label_tag }}{{ user_form.email }}<br /><br />
-                {{ user_form.password.label_tag }}{{ user_form.password }}<br /><br />
-                {{ profile_form.as_p }}
+                <div style="text-align: left;"> 
+                    {{ user_form.username.label_tag }}{{ user_form.username }}<br /><br />
+                    {{ user_form.first_name.label_tag }}{{ user_form.first_name }}<br /><br />
+                    {{ user_form.last_name.label_tag }}{{ user_form.last_name }}<br /><br />
+                    {{ user_form.email.label_tag }}{{ user_form.email }}<br /><br />
+                    {{ user_form.password.label_tag }}{{ user_form.password }}<br /><br />
+                    {{ profile_form.as_p }}
+                </div>
 
-                <input type="submit" name="submit" value="Register" />
+                <div style="text-align: center;"> 
+                    <input type="submit" name="submit" value="Register" class="btn btnRed" style="margin: 0 auto;" />
+                </div>
             </form>
         {% endif %}
     </div>
