--- a/static/ratearant/CSS/styles.css
+++ b/static/ratearant/CSS/styles.css
@@ -1,7 +1,19 @@
 
 /* simple css test */
-.pTextBlue {
-    color: blue;
+h1 {
+    text-align: center;
+    font-size: 24px;
+}
+
+.card {
+    margin: 0 auto;
+    float: none;
+    margin-bottom: 10px;
+}
+
+.star {
+    max-width: 40%;
+    max-height: 40%;
 }
 
 .pTextRed {
