--- a/templates/ratearant/base.html
+++ b/templates/ratearant/base.html
@@ -25,9 +25,12 @@
         </a>
         <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
         <li><a href="#" class="nav-link px-2" style="color: white"><h2>Categories</h2></a></li>
-        <li><a href="#" class="nav-link px-2" style="color: white"><h2>Trending</h2></a></li>
-            <li><a href="#" class="nav-link px-2" style="color: white"><h2>Restaurants</h2></a></li>
+        <!----->
+        <li><a href="{% url 'ratearant:trending' %}" class="nav-link px-2" style="color: white"><h2>Trending</h2></a></li>
+        
+        <li><a href="#" class="nav-link px-2" style="color: white"><h2>Restaurants</h2></a></li>
         </ul>
+
         <div class="text-end">
             {% if user.is_authenticated %}
                 <button type="button" onclick="location.href='{% url 'ratearant:logout' %}';" class="btn btn-light me-2">Logout</button>
