--- a/templates/ratearant/trending.html
+++ b/templates/ratearant/trending.html
@@ -1,12 +1,54 @@
 {% extends 'ratearant/base.html' %}
 {% load static %}
 
-{% block block_title %}
-    Trending Page
-{% endblock %}
+{% block block_title %} Trending Page {% endblock %}
 
 {% block body_block %}
+    <div class="top-rated-restaurants">
+        <h2 class="text-center mb-4">Our Top Rated Restaurants</h2>
+    <div class="row row-cols-1 row-cols-md-3 row-cols-lg-5 g-4">
+        {% for restaurant in top_rated_restaurants %}
+        <div class="col">
+            <div class="card">
+                <img src="static/ratearant/images/pancakes.jpg" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">{{ restaurant.name }}</h5>
+                    <div class="rating">
+                        {% for _ in restaurant.rating_range %}
+                        <span class="fa fa-star"></span>
+                        {% endfor %}
+                    </div>
+                    <p class="card-text">{{ restaurant.location }}</p>
+                    <a href="{% url 'ratearant:restaurant_detail' restaurant.id %}" class="btn btn-primary">See More</a>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
 
+<div class="top-rated-restaurants">
+    <h2 class="text-center mb-4">Your Top Rated Restaurants</h2>
+<div class="row row-cols-1 row-cols-md-3 row-cols-lg-5 g-4">
+    {% for restaurant in top_rated_restaurants %}
+    <div class="col">
+        <div class="card">
+            <img src="https://www.restaurant-in-pattaya.com/mv/media/Goose-Liver-834x487.jpg" class="card-img-top" alt="{{ pizza.name }}">
+            <div class="card-body">
+                <h5 class="card-title">{{ restaurant.name }}</h5>
+                <div class="rating">
+                    {% for _ in restaurant.rating_range %}
+                    <span class="fa fa-star"></span>
+                    {% endfor %}
+                </div>
+                <p class="card-text">{{ restaurant.location }}</p>
+                <a href="{% url 'ratearant:restaurant_detail' restaurant.id %}" class="btn btn-primary">See More</a>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+</div>
 {% endblock %}
 
 {% block block_footer %}
