--- a/templates/ratearant/login.html
+++ b/templates/ratearant/login.html
@@ -21,6 +21,11 @@
             <div style="text-align: center;"> 
                 <input type="submit" name="submit" value="Submit" class="btn btnRed" style="margin: 0 auto;" />
             </div>
+            {% if error_message %}
+            <div class="error-message">
+                {{ error_message }}
+            </div>
+            {% endif %}            
         </form>
     </div>
 {% endblock %}
