--- a/templates/ratearant/categories.html
+++ b/templates/ratearant/categories.html
@@ -6,7 +6,30 @@
 {% endblock %}
 
 {% block body_block %}
-
+    <div style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: center; align-items: center;">
+    {% for cuisine in cuisines %}
+        <div style="border: 2px solid gold; padding: 10px; width: 100%; text-align: center; margin-bottom: 10px;">
+            <h4 style="color: gold;">{{cuisine.cuisineName}}</h4>
+        </div>
+        {% for restaurant in restaurants %}
+            {% if restaurant.cuisine.cuisineName == cuisine.cuisineName %}
+            {#  Single Card Template:#}
+            <div class="card" style="width: 18rem; margin: 10px">
+                <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/26/af/26/f1/selection-of-food.jpg?w=600&h=400&s=1" class="card-img-top" >
+                <div class="card-body">
+                    <div style="display: flex; flex-direction: row">
+                    <h5 class="card-title">{{restaurant.name}}</h5>
+                    </div>
+                    <img src="https://t3.ftcdn.net/jpg/06/78/48/94/360_F_678489461_3A71gTirz0O4paWtpKPYhXfNyz74Ut62.jpg" class="star">
+                    <p class="card-text">{{restaurant.address}}</p>
+                    <a href="/command/1/color" class="btn btn-primary">See More</a>
+                    <a href="/command/1/delete" class="btn btn-primary">Review</a>
+                </div>
+            </div>
+            {% endif %}
+        {% endfor %}
+    {% endfor %}
+    </div>
 {% endblock %}
 
 {% block block_footer %}
