--- a/templates/ratearant/base.html
+++ b/templates/ratearant/base.html
@@ -19,7 +19,7 @@
 
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" id="changeImage" alt="Site icon" style="width: 130px; height: 130px;" onclick="changeImage()"/>
+        <img src="{% static 'ratearant/images/ratearanticon.jpeg' %}" alt="Site icon" style="width: 130px; height: 130px;"/>
         <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
           <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
         </a>
