--- a/templates/ratearant/home.html
+++ b/templates/ratearant/home.html
@@ -11,6 +11,8 @@
 
 {% block body_block %}
 
+<link rel="stylesheet" href="{% static 'ratearant/CSS/styles.css' %}">
+
 <h1>{{ top_message }}</h1>
 
 <div style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: center; align-items: center;">
@@ -25,8 +27,10 @@
           </div>
           <img src="https://t3.ftcdn.net/jpg/06/78/48/94/360_F_678489461_3A71gTirz0O4paWtpKPYhXfNyz74Ut62.jpg" class="star">
           <p class="card-text">{{ restaurant.address }}</p>
-          <a href="/ratearant/restaurant/{{ restaurant.slug }}/" class="btn btn-primary">See More</a>
+          <a href="/ratearant/restaurant/{{ restaurant.slug }}/" class="btn btnRed">See More</a>
+          {% if user.is_authenticated %}
           <a href="{% url 'ratearant:add_review' restaurant_name_slug=restaurant.slug %}">Add Review</a>
+          {% endif %}
         </div>
     </div>
   {% endfor %}
@@ -35,6 +39,7 @@
 {% endif %}
 </div>
 
+{% if user.is_authenticated %}
 <h1>{{ fave_message }}</h1>
 
 <div style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: center; align-items: center;">
@@ -49,7 +54,7 @@
             </div>
             <img src="https://t3.ftcdn.net/jpg/06/78/48/94/360_F_678489461_3A71gTirz0O4paWtpKPYhXfNyz74Ut62.jpg" class="star">
             <p class="card-text">{{ restaurant.address }}</p>
-            <a href="/command/1/color" class="btn btn-primary">See More</a>
+            <a href="/command/1/color" class="btn btnRed">See More</a>
             <a href="{% url 'ratearant:add_review' restaurant_name_slug=restaurant.slug %}">Add Review</a>
           </div>
       </div>
@@ -58,6 +63,7 @@
     <p>No restaurants are available.</p>
   {% endif %}
   </div>
+{% endif %}
         
 {% endblock %}
 
