--- a/templates/ratearant/base.html
+++ b/templates/ratearant/base.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <title>
             Rate-A-Rant - 
             {% block block_title %}
@@ -24,10 +25,10 @@
           <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
         </a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="{% url 'ratearant:categories' %}" class="nav-link px-2" style="color: white"><h2>Categories</h2></a></li>
+            <li><a href="{% url 'ratearant:categories' %}" class="nav-link px-2" style="color: white"><h2>Food Styles</h2></a></li>
         <!----->
         <li><a href="{% url 'ratearant:trending' %}" class="nav-link px-2" style="color: white"><h2>Trending</h2></a></li>
-        
+        <! !>
         <li><a href="#" class="nav-link px-2" style="color: white"><h2>Restaurants</h2></a></li>
         </ul>
 
@@ -59,7 +60,7 @@
             </div>
             <div class="col-11 d-flex align-items-center justify-content-center">
                 {% if isHomePage %}
-                    <div class="footerLinks mx-2" style="border-right: ">
+                    <div class="footerLinks mx-2" style="border-right:1px">
                     <a href="{% url 'ratearant:about' %}" style="color: white"><h3>About</h3></a>
                     </div>
                 {% elif isAboutPage %}
@@ -83,5 +84,9 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="{% static 'ratearant/scripts/scriptsTest.js' %}"></script>
+<script>
+    var staticUrl = "{% static 'ratearant/images/restaurants/' %}";
+</script>
+
 </body>
 </html>
