--- a/templates/ratearant/categories.html
+++ b/templates/ratearant/categories.html
@@ -17,13 +17,22 @@
             <div class="card" style="width: 18rem; margin: 10px">
                 <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/26/af/26/f1/selection-of-food.jpg?w=600&h=400&s=1" class="card-img-top" >
                 <div class="card-body">
-                  <div style="display: flex; flex-direction: row">
-                    <h5 class="card-title">{{ restaurant.name }}</h5>
-                  </div>
-                  <img src="https://t3.ftcdn.net/jpg/06/78/48/94/360_F_678489461_3A71gTirz0O4paWtpKPYhXfNyz74Ut62.jpg" class="star">
-                  <p class="card-text">{{ restaurant.address }}</p>
-                  <a href="/ratearant/restaurant/{{ restaurant.slug }}/" class="btn btn-primary">See More</a>
-                  <a href="{% url 'ratearant:add_review' restaurant_name_slug=restaurant.slug %}">Add Review</a>
+                    <div style="display: flex; flex-direction: row">
+                        <h5 class="card-title">{{ restaurant.name }}</h5>
+                    </div>
+                    <div class="star-rating">
+                    {% for i in range %}
+                        {% if i <= restaurant.average_rating %}
+                            <span >&#11088;</span>
+                        {% else %}
+                            <span class="empty-star">&#9734;</span>
+                        {% endif %}
+                    {% endfor %}
+                    <p>Average Rating: {{ restaurant.average_rating }} ({{ restaurant.number_of_reviews }} reviews)</p>
+                    </div>
+                    <p class="card-text">{{ restaurant.address }}</p>
+                    <a href="/ratearant/restaurant/{{ restaurant.slug }}/" class="btn btn-primary">See More</a>
+                    <a href="{% url 'ratearant:add_review' restaurant_name_slug=restaurant.slug %}">Add Review</a>
                 </div>
             </div>
             {% endif %}
