--- a/templates/ratearant/home.html
+++ b/templates/ratearant/home.html
@@ -25,7 +25,16 @@
           <div style="display: flex; flex-direction: row">
             <h5 class="card-title">{{ restaurant.name }}</h5>
           </div>
-          <img src="https://t3.ftcdn.net/jpg/06/78/48/94/360_F_678489461_3A71gTirz0O4paWtpKPYhXfNyz74Ut62.jpg" class="star">
+          <div class="star-rating">
+            {% for i in range %}
+              {% if i <= restaurant.average_rating %}
+                <span >&#11088;</span>
+              {% else %}
+                <span class="empty-star">&#9734;</span>
+              {% endif %}
+            {% endfor %}
+            <p>Average Rating: {{ restaurant.average_rating }} ({{ restaurant.number_of_reviews }} reviews)</p>
+          </div>
           <p class="card-text">{{ restaurant.address }}</p>
           <a href="/ratearant/restaurant/{{ restaurant.slug }}/" class="btn btnRed">See More</a>
           {% if user.is_authenticated %}
@@ -52,7 +61,16 @@
             <div style="display: flex; flex-direction: row">
               <h5 class="card-title">{{ restaurant.name }}</h5>
             </div>
-            <img src="https://t3.ftcdn.net/jpg/06/78/48/94/360_F_678489461_3A71gTirz0O4paWtpKPYhXfNyz74Ut62.jpg" class="star">
+            <div class="star-rating">
+              {% for i in range %}
+                {% if i <= restaurant.average_rating %}
+                  <span >&#11088;</span>
+                {% else %}
+                  <span class="empty-star">&#9734;</span>
+                {% endif %}
+              {% endfor %}
+              <p>Average Rating: {{ restaurant.average_rating }} ({{ restaurant.number_of_reviews }} reviews)</p>
+            </div>
             <p class="card-text">{{ restaurant.address }}</p>
             <a href="/command/1/color" class="btn btnRed">See More</a>
             <a href="{% url 'ratearant:add_review' restaurant_name_slug=restaurant.slug %}">Add Review</a>
