--- a/templates/ratearant/base.html
+++ b/templates/ratearant/base.html
@@ -28,8 +28,6 @@
             <li><a href="{% url 'ratearant:categories' %}" class="nav-link px-2" style="color: white"><h2>Food Styles</h2></a></li>
         <!----->
         <li><a href="{% url 'ratearant:trending' %}" class="nav-link px-2" style="color: white"><h2>Trending</h2></a></li>
-        <! !>
-        <li><a href="#" class="nav-link px-2" style="color: white"><h2>Restaurants</h2></a></li>
         </ul>
 
         <div class="text-end">
@@ -86,6 +84,7 @@
 <script src="{% static 'ratearant/scripts/scriptsTest.js' %}"></script>
 <script>
     var staticUrl = "{% static 'ratearant/images/restaurants/' %}";
+    var cuisineUrl= "{% static 'ratearant/images/cuisines/' %}"
 </script>
 
 </body>
