--- a/templates/ratearant/restaurant.html
+++ b/templates/ratearant/restaurant.html
@@ -31,7 +31,7 @@
 
                             </ul>
                         </div>
-                    <a href="{% url 'ratearant:home' %}" class="btn btn-primary">Back</a>
+                    <a href="{% url 'ratearant:home' %}" class="btn btnRed">Back</a>
                     </div>
                 </div>
 	        {% endif %}
