--- a/templates/ratearant/base.html
+++ b/templates/ratearant/base.html
@@ -25,7 +25,7 @@
           <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
         </a>
             <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="{% url 'ratearant:categories' %}" class="nav-link px-2" style="color: white"><h2>Food Styles</h2></a></li>
+            <li><a href="{% url 'ratearant:food_styles' %}" class="nav-link px-2" style="color: white"><h2>Food Styles</h2></a></li>
         <!----->
         <li><a href="{% url 'ratearant:trending' %}" class="nav-link px-2" style="color: white"><h2>Trending</h2></a></li>
         </ul>
