--- a/static/ratearant/CSS/styles.css
+++ b/static/ratearant/CSS/styles.css
@@ -78,4 +78,10 @@ h1 {
 .cuisinePic{
     max-height: 300px;
     max-width: 200px;
+    object-fit: cover;
+}
+.cuisine-image {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
 }
